==> MyoMod/motion.arduino.ICM42670P/src/ICM42670P.cpp <==
#include "ICM42670P.h"
#include "imu/inv_imu_apex.h"
#define I2C_DEFAULT_CLOCK 400000
#define I2C_MAX_CLOCK 1000000
#define ICM42670_I2C_ADDRESS 0x68
#define ARDUINO_I2C_BUFFER_LENGTH 32
#define SPI_READ 0x80
#define SPI_DEFAULT_CLOCK 6000000
#define SPI_MAX_CLOCK 24000000
#define WOM_THRESHOLD 50 /* = 50 * 1000 / 256 = 195 mg */

int ICM42670::begin() {
    struct inv_imu_serif icm_serif;
    int rc = 0;
    uint8_t who_am_i;
    inv_imu_int1_pin_config_t int1_pin_config;

    LPSPI_Enable(spi, 1);
    icm_serif.serif_type = UI_SPI4;
    icm_serif.read_reg    = spi_read;
    icm_serif.write_reg = spi_write;
    
    /* Initialize serial interface between MCU and Icm43xxx */
    icm_serif.context     = (void*)this;
    icm_serif.max_read    = 2560; /* maximum number of bytes allowed per serial read */
    icm_serif.max_write = 2560; /* maximum number of bytes allowed per serial write */
    rc = inv_imu_init(&icm_driver, &icm_serif, NULL);
    if (rc != INV_ERROR_SUCCESS) {
        return rc;
    }
    icm_driver.sensor_event_cb = event_cb;
    int1_config = { (inv_imu_interrupt_value)0 };
    
    /* Check WHOAMI */
    rc = inv_imu_get_who_am_i(&icm_driver, &who_am_i);
    if(rc != 0) {
        return -2;
    }
    if (who_am_i != INV_IMU_WHOAMI) {
        return -3;
    }
    
    /*
     * Configure interrupts pins
     * - Polarity High
     * - Pulse mode
     * - Push-Pull drive
    */
    int1_pin_config.int_polarity = INT_CONFIG_INT1_POLARITY_HIGH;
    int1_pin_config.int_mode         = INT_CONFIG_INT1_MODE_PULSED;
    int1_pin_config.int_drive        = INT_CONFIG_INT1_DRIVE_CIRCUIT_PP;
    inv_imu_set_pin_config_int1(&icm_driver, &int1_pin_config);

    /* All APEX off */
    apex_tilt_enable = false;
    apex_pedometer_enable = false;

    // successful init, return 0
    return 0;
}

static int spi_write(inv_imu_serif* serif, uint8_t reg, const uint8_t * wbuffer, uint32_t wlen) {
    ICM42670* obj = (ICM42670*)serif->context;

    // prepare buffer that prepends the register address to the data
    uint8_t buffer[wlen+1];
    buffer[0] = reg;
    memcpy(buffer+1, wbuffer, wlen);

    // Write data
    lpspi_transfer_t xfer;
    xfer.txData = buffer;
    xfer.rxData = NULL;
    xfer.dataSize = wlen + 1;
    xfer.configFlags = kLPSPI_MasterPcs0 | kLPSPI_MasterWidth1 | kLPSPI_MasterPcsContinuous;

    LPSPI_MasterTransferBlocking(obj->spi, &xfer);
    return 0;
}

static int spi_read(inv_imu_serif* serif, uint8_t reg, uint8_t * rbuffer, uint32_t rlen) {
    ICM42670* obj = (ICM42670*)serif->context;

    // prepare buffer that prepends the register address to the data
    uint8_t wbuffer[rlen+1];
    wbuffer[0] = reg | SPI_READ;
    uint8_t inbuffer[rlen+1];

    // Write data
    lpspi_transfer_t xfer;
    xfer.txData = wbuffer;
    xfer.rxData = inbuffer;
    xfer.dataSize = rlen + 1;
    xfer.configFlags = kLPSPI_MasterPcs0 | kLPSPI_MasterWidth1 | kLPSPI_MasterPcsContinuous;

    LPSPI_MasterTransferBlocking(obj->spi, &xfer);

    // Copy data to output buffer
    memcpy(rbuffer, inbuffer+1, rlen);
    return 0;
}
