==> LuisThein/motion.arduino.ICM42670P/src/ICM42670P.cpp <==
#include "Arduino.h"
#include "ICM42670P.h"
#include "imu/inv_imu_apex.h"
#define I2C_DEFAULT_CLOCK 400000
#define I2C_MAX_CLOCK 1000000
#define ICM42670_I2C_ADDRESS 0x68
#define ARDUINO_I2C_BUFFER_LENGTH 32
#define SPI_READ 0x80
#define SPI_DEFAULT_CLOCK 6000000
#define SPI_MAX_CLOCK 24000000
#define WOM_THRESHOLD 50 /* = 50 * 1000 / 256 = 195 mg */

int ICM42670::begin() {
  struct inv_imu_serif icm_serif;
  int rc = 0;
  uint8_t who_am_i;
  inv_imu_int1_pin_config_t int1_pin_config;

  if (i2c != NULL) {
    i2c->begin();
    i2c->setClock(clk_freq);
    icm_serif.serif_type = UI_I2C;
    icm_serif.read_reg  = i2c_read;
    icm_serif.write_reg = i2c_write;
  } else {
    spi->begin();
    pinMode(spi_cs,OUTPUT);
    digitalWrite(spi_cs,HIGH);
    icm_serif.serif_type = UI_SPI4;
    icm_serif.read_reg  = spi_read;
    icm_serif.write_reg = spi_write;
  }
  /* Initialize serial interface between MCU and Icm43xxx */
  icm_serif.context   = (void*)this;
  icm_serif.max_read  = 2560; /* maximum number of bytes allowed per serial read */
  icm_serif.max_write = 2560; /* maximum number of bytes allowed per serial write */
  rc = inv_imu_init(&icm_driver, &icm_serif, NULL);
  if (rc != INV_ERROR_SUCCESS) {
    return rc;
  }
  icm_driver.sensor_event_cb = event_cb;
  int1_config = { (inv_imu_interrupt_value)0 };

  /* Check WHOAMI */
  rc = inv_imu_get_who_am_i(&icm_driver, &who_am_i);
  if(rc != 0) {
    return -2;
  }
  if (who_am_i != INV_IMU_WHOAMI) {
    return -3;
  }

  /*
   * Configure interrupts pins
   * - Polarity High
   * - Pulse mode
   * - Push-Pull drive
  */
  int1_pin_config.int_polarity = INT_CONFIG_INT1_POLARITY_HIGH;
  int1_pin_config.int_mode     = INT_CONFIG_INT1_MODE_PULSED;
  int1_pin_config.int_drive    = INT_CONFIG_INT1_DRIVE_CIRCUIT_PP;
  inv_imu_set_pin_config_int1(&icm_driver, &int1_pin_config);

  /* All APEX off */
  apex_tilt_enable = false;
  apex_pedometer_enable = false;

  // successful init, return 0
  return 0;
}

int ICM42670::begin(uint8_t sda, uint8_t scl, uint16_t freq) {
  struct inv_imu_serif icm_serif;
  int rc = 0;
  uint8_t who_am_i;
  inv_imu_int1_pin_config_t int1_pin_config;

  if (i2c != NULL) {
    i2c->begin(sda, scl, freq);
    i2c->setClock(clk_freq);
    icm_serif.serif_type = UI_I2C;
    icm_serif.read_reg  = i2c_read;
    icm_serif.write_reg = i2c_write;
  } else {
    spi->begin();
    pinMode(spi_cs,OUTPUT);
    digitalWrite(spi_cs,HIGH);
    icm_serif.serif_type = UI_SPI4;
    icm_serif.read_reg  = spi_read;
    icm_serif.write_reg = spi_write;
  }
  /* Initialize serial interface between MCU and Icm43xxx */
  icm_serif.context   = (void*)this;
  icm_serif.max_read  = 2560; /* maximum number of bytes allowed per serial read */
  icm_serif.max_write = 2560; /* maximum number of bytes allowed per serial write */
  rc = inv_imu_init(&icm_driver, &icm_serif, NULL);
  if (rc != INV_ERROR_SUCCESS) {
    return rc;
  }
  icm_driver.sensor_event_cb = event_cb;
  int1_config = { (inv_imu_interrupt_value)0 };

  /* Check WHOAMI */
  rc = inv_imu_get_who_am_i(&icm_driver, &who_am_i);
  if(rc != 0) {
    return -2;
  }
  if (who_am_i != INV_IMU_WHOAMI) {
    return -3;
  }

  /*
   * Configure interrupts pins
   * - Polarity High
   * - Pulse mode
   * - Push-Pull drive
  */
  int1_pin_config.int_polarity = INT_CONFIG_INT1_POLARITY_HIGH;
  int1_pin_config.int_mode     = INT_CONFIG_INT1_MODE_PULSED;
  int1_pin_config.int_drive    = INT_CONFIG_INT1_DRIVE_CIRCUIT_PP;
  inv_imu_set_pin_config_int1(&icm_driver, &int1_pin_config);

  /* All APEX off */
  apex_tilt_enable = false;
  apex_pedometer_enable = false;

  // successful init, return 0
  return 0;
}

static int spi_write(inv_imu_serif* serif, uint8_t reg, const uint8_t * wbuffer, uint32_t wlen) {
  ICM42670* obj = (ICM42670*)serif->context;
  obj->spi->beginTransaction(SPISettings(obj->clk_freq, MSBFIRST, SPI_MODE3));
  digitalWrite(obj->spi_cs,LOW);
  obj->spi->transfer(reg);
  for(uint8_t i = 0; i < wlen; i++) {
    obj->spi->transfer(wbuffer[i]);
  }
  digitalWrite(obj->spi_cs,HIGH);
  obj->spi->endTransaction();
  return 0;
}

static int spi_read(inv_imu_serif* serif, uint8_t reg, uint8_t * rbuffer, uint32_t rlen) {
  ICM42670* obj = (ICM42670*)serif->context;
  obj->spi->beginTransaction(SPISettings(obj->clk_freq, MSBFIRST, SPI_MODE3));
  digitalWrite(obj->spi_cs,LOW);
  obj->spi->transfer(reg | SPI_READ);
  obj->spi->transfer(rbuffer,rlen);
  digitalWrite(obj->spi_cs,HIGH);
  obj->spi->endTransaction();
  return 0;
}
